Changed border color to gray